fix: Remove horizontal scrollbar from Header

--- a/components/header/index.scss
+++ b/components/header/index.scss
@@ -11,7 +11,6 @@
 .rvo-header__logo-wrapper {
   margin-block-end: 10px;
   margin-inline-start: calc(50% - 25px);
-  width: 100%;
 }
 
 .rvo-header__logo-link {
